# not-env-sdk-python

./: LICENSE  README.md  REQUIREMENTS.md  example.py  pyproject.toml
src/not_env_sdk/: __init__.py  register.py  sdk.py
tests/: __init__.py  test_register.py
